--- a/src/main/resources/assets/deepmoblearningbm/lang/en_us.lang
+++ b/src/main/resources/assets/deepmoblearningbm/lang/en_us.lang
@@ -1,2 +1,2 @@
-item.deepmoblearningbm.agonizer_linker.name=Agonizer Linker
-tile.deepmoblearningbm.blockDigitalAgonizer.name=Digital Mob Agonizer
+item.deepmoblearningbm.altar_linker.name=Altar Linker
+tile.deepmoblearningbm.digital_agonizer.name=Digital Mob Agonizer
